--- a/alist-resource/myAlist.css
+++ b/alist-resource/myAlist.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap');
+
 * {
-  font-family: "ZCOOL KuaiLe", serif;
+  font-family: 'ZCOOL KuaiLe', sans-serif;
 }
